# ANN-classification-project

./: app.py  pyproject.toml  readme.md  requirements.txt
